@@ -1,9 +1,7 @@
-package br.com.commerce.api.dto.User.Address;
+package br.com.commerce.api.dto.user.address;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -36,7 +34,7 @@ public class AddressMapper {
     public List<AddressResponse> toListAddressResponse(List<Address> listAddress) {
         return listAddress.stream()
                 .map(this::toAddressResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
